--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.20.1
-ipython==7.21.0
 matplotlib==3.3.4
+numpy==1.20.1
 pandas==1.2.3
+ipython==7.21.0
 scikit_learn==0.24.1
+jupyterlab==3.0.12
